--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ Cargo.lock
 *.pdb
 
 # Template
-# /substrate-node-template/
+/substrate-node-template/
 # /contract-substrate-node-template
 
 # PYTHON
